--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,8 @@
                                 <strong>Instagram</strong>
                             </h4>
                             <h5 class="card-text mbr-fonts-style display-7">
-                                Lorem ipsum dolor sit amet.
+                                <a href="https://www.instagram.com/richlycakes" target="_blank"> @richlycakes</a>
+                                
                             </h5>
                         </div>
                     </div>
