fixed partial prices

--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">1</a></h3>
+                            <h3><a href="#">Medium</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
-                                    <p class="price"><span>$30.00</span></p>
+                                    <p class="price"><span>$35.00</span></p>
                                 </div>
                             </div>
                             <div class="bottom-area d-flex px-3">
@@ -215,10 +215,10 @@
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">2</a></h3>
+                            <h3><a href="#">Medium</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
-                                    <p class="price"><span>$120.00</span></p>
+                                    <p class="price"><span>$35.00</span></p>
                                 </div>
                             </div>
                             <div class="bottom-area d-flex px-3">
@@ -245,10 +245,10 @@
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">3</a></h3>
+                            <h3><a href="#">Medium</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
-                                    <p class="price"><span>$120.00</span></p>
+                                    <p class="price"><span>$35.00</span></p>
                                 </div>
                             </div>
                             <div class="bottom-area d-flex px-3">
@@ -275,10 +275,10 @@
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">4</a></h3>
+                            <h3><a href="#">Medium</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
-                                    <p class="price"><span>$120.00</span></p>
+                                    <p class="price"><span>$35.00</span></p>
                                 </div>
                             </div>
                             <div class="bottom-area d-flex px-3">
@@ -307,10 +307,10 @@
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">5</a></h3>
+                            <h3><a href="#">Large</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
-                                    <p class="price"><span>$120.00</span></p>
+                                    <p class="price"><span>$45.00</span></p>
                                 </div>
                             </div>
                             <!-- <div class="bottom-area d-flex px-3">
@@ -336,10 +336,10 @@
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">6</a></h3>
+                            <h3><a href="#">Two  Tier cakes</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
-                                    <p class="price"><span>$120.00</span></p>
+                                    <p class="price"><span>$70.00</span></p>
                                 </div>
                             </div>
                             <div class="bottom-area d-flex px-3">
@@ -396,10 +396,10 @@
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">8</a></h3>
+                            <h3><a href="#">Two tier cakes</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
-                                    <p class="price"><span>$120.00</span></p>
+                                    <p class="price"><span>$70.00</span></p>
                                 </div>
                             </div>
                             <div class="bottom-area d-flex px-3">
@@ -427,10 +427,10 @@
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">9</a></h3>
+                            <h3><a href="#">Medium</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
-                                    <p class="price"><span>$120.00</span></p>
+                                    <p class="price"><span>$35.00</span></p>
                                 </div>
                             </div>
                             <!-- <div class="bottom-area d-flex px-3">
@@ -456,10 +456,10 @@
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">10</a></h3>
+                            <h3><a href="#">Medium</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
-                                    <p class="price"><span>$120.00</span></p>
+                                    <p class="price"><span>$35.00</span></p>
                                 </div>
                             </div>
                             <div class="bottom-area d-flex px-3">
@@ -486,10 +486,10 @@
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">11</a></h3>
+                            <h3><a href="#">Medium</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
-                                    <p class="price"><span>$120.00</span></p>
+                                    <p class="price"><span>$35.00</span></p>
                                 </div>
                             </div>
                             <div class="bottom-area d-flex px-3">
@@ -519,7 +519,7 @@
                             <h3><a href="#">12</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
-                                    <p class="price"><span>$120.00</span></p>
+                                    <p class="price"><span>$60.00</span></p>
                                 </div>
                             </div>
                             <div class="bottom-area d-flex px-3">
