--- a/index.html
+++ b/index.html
@@ -366,10 +366,10 @@
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">7</a></h3>
+                            <h3><a href="#">Large</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
-                                    <p class="price"><span>$120.00</span></p>
+                                    <p class="price"><span>$45.00</span></p>
                                 </div>
                             </div>
                             <div class="bottom-area d-flex px-3">
@@ -516,7 +516,7 @@
                             <div class="overlay"></div>
                         </a>
                         <div class="text py-3 pb-4 px-3 text-center">
-                            <h3><a href="#">12</a></h3>
+                            <h3><a href="#">Large</a></h3>
                             <div class="d-flex">
                                 <div class="pricing">
                                     <p class="price"><span>$60.00</span></p>
