Done edditing images

--- a/contact.html
+++ b/contact.html
@@ -112,9 +112,16 @@
                             </h5>
                             <ul class="list mbr-fonts-style display-7">
                                 <li class="mbr-text item-wrap"><strong>Phone</strong>: <a href="tel:+263773556975"
-                                        class="text-primary">+263773556975</a></li>
+                                        class="text-primary">+263773556975</a>
+                                    , &nbsp;<a href="tel:+263773556975" class="text-primary">+263773556975</a></li>
+                                </li>
+
                                 <li class="mbr-text item-wrap"><strong>WhatsApp</strong>: +<a
-                                        href="https://wa.me/263773556975" class="text-primary">263773556975</a></li>
+                                        href="https://wa.me/263773556975" class="text-primary">263773556975</a>
+                                    , &nbsp;
+                                    +<a href="https://wa.me/263773556975" class="text-primary">263773556975</a></li>
+                                </li>
+
                                 <li class="mbr-text item-wrap"><strong>Address</strong>: 2008 Garden Lane, Aspindale
                                     Park, Harare</li>
                             </ul>
@@ -157,7 +164,7 @@
                             </h4>
                             <h5 class="card-text mbr-fonts-style display-7">
                                 <a href="https://www.instagram.com/richlycakes" target="_blank"> @richlycakes</a>
-                                
+
                             </h5>
                         </div>
                     </div>
@@ -193,86 +200,55 @@
     </section>
 
     <section data-bs-version="5.1" class="footer3 cid-tWHUmm6VPZ" once="footers" id="footer3-m">
-
-
-
-
-
         <div class="container">
             <div class="media-container-row align-center mbr-white">
                 <div class="row row-links">
                     <ul class="foot-menu">
-
-
-
-
-
                         <li class="foot-menu-item mbr-fonts-style display-7">
-                            <a class="text-white" href="#" target="_blank">About us</a>
+                            <a class="text-white" href="about.html">About us</a>
                         </li>
                         <li class="foot-menu-item mbr-fonts-style display-7">
-                            <a class="text-white" href="#" target="_blank">Services</a>
+                            <a class="text-white" href="cakes.html">Shop</a>
                         </li>
                         <li class="foot-menu-item mbr-fonts-style display-7">
-                            <a class="text-white" href="#" target="_blank">Contact Us</a>
-                        </li>
-                        <li class="foot-menu-item mbr-fonts-style display-7">
-                            <a class="text-white" href="#" target="_blank">Careers</a>
-                        </li>
-                        <li class="foot-menu-item mbr-fonts-style display-7">
-                            <a class="text-white" href="#" target="_blank">Work</a>
+                            <a class="text-white" href="contact.html" target="_blank">Contact Us</a>
                         </li>
                     </ul>
                 </div>
                 <div class="row social-row">
                     <div class="social-list align-right pb-2">
 
-
-
-
-
-
                         <div class="soc-item">
-                            <a href="https://twitter.com/mobirise" target="_blank">
+                            <a href="" target="_blank">
                                 <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
+                            <a href="https://www.facebook.com/profile.php?id=100069840939584" target="_blank">
                                 <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://www.youtube.com/c/mobirise" target="_blank">
-                                <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
-                            </a>
-                        </div>
-                        <div class="soc-item">
-                            <a href="https://instagram.com/mobirise" target="_blank">
+                            <a href="https://www.instagram.com/richlycakes" target="_blank">
                                 <span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://plus.google.com/u/0/+Mobirise" target="_blank">
-                                <span class="socicon-googleplus socicon mbr-iconfont mbr-iconfont-social"></span>
-                            </a>
-                        </div>
-                        <div class="soc-item">
-                            <a href="https://www.behance.net/Mobirise" target="_blank">
-                                <span class="socicon-behance socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <a href="https://wa.me/263773556975" target="_blank">
+                                <span class="socicon-whatsapp socicon mbr-iconfont mbr-iconfont-social"></span>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="row row-copirayt">
                     <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                        © Copyright 2025 Mobirise. All Rights Reserved.
+                        RichlyCakes © 2023
                     </p>
                 </div>
             </div>
         </div>
     </section>
-    
+
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/smoothscroll/smooth-scroll.js"></script>
     <script src="assets/ytplayer/index.js"></script>
