--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,7 @@
     </noscript>
     <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
     <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+    <link rel="stylesheet" href="assets/shop.css">
 
 
 
@@ -36,6 +37,18 @@
 </head>
 
 <body>
+
+    <div class="hero-wrap hero-bread"
+        style="background-image: url('assets/images/leonardo-diffusion-xl-a-cake-with-chocolate-dripping-with-piec-2-1344x896.jpg');">
+        <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
+        <div class="container">
+            <div class="row no-gutters slider-text align-items-center justify-content-center">
+                <div class="col-md-9 ftco-animate text-center">
+                    <h1 class="mb-0 bread">Contact Us</h1>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <section data-bs-version="5.1" class="menu menu3 cid-tWgak5ck6T" once="menu" id="menu3-6">
 
@@ -64,6 +77,8 @@
                     <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
                         <li class="nav-item"><a class="nav-link link text-white text-primary display-4"
                                 href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link link text-white display-4" href="shop.html">Shop</a>
+                        </li>
                         <li class="nav-item"><a class="nav-link link text-white display-4"
                                 href="contact.html">Contact</a>
                         </li>
@@ -93,33 +108,20 @@
 
 
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-12 content-head">
-                    <div class="mbr-section-head mb-5">
-                        <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                            <strong>Contacts</strong>
-                        </h3>
-
-                    </div>
-                </div>
-            </div>
             <div class="row justify-content-center mt-4">
                 <div class="card col-12 col-md-6">
                     <div class="card-wrapper">
                         <div class="text-wrapper">
-                            <h5 class="cardTitle mbr-fonts-style mb-2 display-5">
-                                <strong>Contact Us</strong>
-                            </h5>
                             <ul class="list mbr-fonts-style display-7">
                                 <li class="mbr-text item-wrap"><strong>Phone</strong>: <a href="tel:+263773556975"
                                         class="text-primary">+263773556975</a>
-                                    , &nbsp;<a href="tel:+263773556975" class="text-primary">+263773556975</a></li>
+                                    , &nbsp;<a href="tel:+263775537385" class="text-primary">+263775537385</a></li>
                                 </li>
 
                                 <li class="mbr-text item-wrap"><strong>WhatsApp</strong>: +<a
                                         href="https://wa.me/263773556975" class="text-primary">263773556975</a>
                                     , &nbsp;
-                                    +<a href="https://wa.me/263773556975" class="text-primary">263773556975</a></li>
+                                    +<a href="https://wa.me/263775537385" class="text-primary">263775537385</a></li>
                                 </li>
 
                                 <li class="mbr-text item-wrap"><strong>Address</strong>: 2008 Garden Lane, Aspindale
@@ -207,9 +209,9 @@
                         <li class="foot-menu-item mbr-fonts-style display-7">
                             <a class="text-white" href="about.html">About us</a>
                         </li>
-                        <li class="foot-menu-item mbr-fonts-style display-7">
+                        <!-- <li class="foot-menu-item mbr-fonts-style display-7">
                             <a class="text-white" href="cakes.html">Shop</a>
-                        </li>
+                        </li> -->
                         <li class="foot-menu-item mbr-fonts-style display-7">
                             <a class="text-white" href="contact.html" target="_blank">Contact Us</a>
                         </li>
