--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
                     <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
                         <li class="nav-item"><a class="nav-link link text-white text-primary display-4"
                                 href="index.html">Home</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link link text-white display-4"
+                                href="shop.html">Shop</a></li> -->
                         <li class="nav-item"><a class="nav-link link text-white display-4"
                                 href="contact.html">Contact</a>
                         </li>
@@ -541,13 +543,15 @@
                     </div>
                 </div>
             </div>
-            <div class="col text-center">
+            <!-- <div class="col text-center">
                 <div class="block-27">
                     <a href="shop.html">
-                        <div class="btn btn-primary" style="background-color: #112c40 !important; color: white !important; border-color: #112c40 !important; ">More Cakes</div>
+                        <div class="btn btn-primary"
+                            style="background-color: #112c40 !important; color: white !important; border-color: #112c40 !important; ">
+                            More Cakes</div>
                     </a>
                 </div>
-            </div>
+            </div> -->
     </section>
 
     <section data-bs-version="5.1" class="footer3 cid-tWHUmm6VPZ" once="footers" id="footer3-m">
