--- a/shop.html
+++ b/shop.html
@@ -106,6 +106,53 @@
         </div>
     </div>
 
+    <!-- <div class="slider">
+        <div class="slider-track">
+            <div class="slide">
+                <img src="assets/images/55.png" width="250" height="100" alt="">
+            </div>
+            <div class="slide">
+                <img src="assets/images/24-cutout.png" width="250" height="100" alt="">
+            </div>
+            <div class="slide">
+                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
+            </div>
+            <div class="slide">
+                <img src="assets/images/49.png" width="250" height="100" alt="">
+            </div>
+            <div class="slide">
+                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
+            </div>
+            <div class="slide">
+                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
+            </div>
+            <div class="slide">
+                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
+            </div>
+            <div class="slide">
+                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
+            </div>
+            <div class="slide">
+                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
+            </div>
+            <div class="slide">
+                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
+            </div>
+            <div class="slide">
+                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
+            </div>
+            <div class="slide">
+                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
+            </div>
+            <div class="slide">
+                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
+            </div>
+            <div class="slide">
+                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
+            </div>
+        </div>
+    </div> -->
+
     <section class="ftco-section">
         <div class="container">
             <div class="row justify-content-center">
@@ -1458,52 +1505,7 @@
         </div>
     </section>
 
-    <div class="slider">
-        <div class="slider-track">
-            <div class="slide">
-                <img src="assets/images/55.png" width="250" height="100" alt="">
-            </div>
-            <div class="slide">
-                <img src="assets/images/24-cutout.png" width="250" height="100" alt="">
-            </div>
-            <div class="slide">
-                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
-            </div>
-            <div class="slide">
-                <img src="assets/images/49.png" width="250" height="100" alt="">
-            </div>
-            <div class="slide">
-                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
-            </div>
-            <div class="slide">
-                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
-            </div>
-            <div class="slide">
-                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
-            </div>
-            <div class="slide">
-                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
-            </div>
-            <div class="slide">
-                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
-            </div>
-            <div class="slide">
-                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
-            </div>
-            <div class="slide">
-                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
-            </div>
-            <div class="slide">
-                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
-            </div>
-            <div class="slide">
-                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
-            </div>
-            <div class="slide">
-                <img src="assets/images/roora-day2.png" width="250" height="100" alt="">
-            </div>
-        </div>
-    </div>
+    
 
     <section data-bs-version="5.1" class="footer3 cid-tWHUmm6VPZ" once="footers" id="footer3-m">
         <div class="container">
